Pull up following revision(s) (requested by msaitoh in ticket #394): 	sys/dev/pci/pcivar.h: revision 1.101 	sys/dev/pci/pci_map.c: revision 1.32 	sys/dev/ic/i82801lpcreg.h: revision 1.12 	sys/arch/x86/pci/ichlpcib.c: revision 1.45 Fix a bug that ichlpcib(4) maps I/O area incorrectly and then fails to attach gpio. It might also fix ACPI related problem described in PR#48960:   - The LPCIB_PCI_PMBASE and LPCIB_PCI_GPIO register are alike PCI BAR but not     completely compatible with it. It's ok because the registers' addresses are     out of BAR0-BAR5(0x10-0x24) and are located in the device-dependent header.     The PMBASE and GPIO registers define the base address and the type but not     describe the size. The size is fixed to 128bytes. So use     pci_mapreg_submap().   - Make pci_mapreg_submap() extern again.   - Fix the calculation of the map size in pci_mapreg_submap().